--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/siwmovie
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=osc
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 # = Web server
